# ai_employee

./: .env.example  .gitignore  CLAUDE.md  README.md  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  pyproject.toml  tier_requirement.txt  whatsapp_watcher.py
AI_Employee_Vault/: .gitignore  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Logs/: audit.jsonl
AI_Employee_Vault/Needs_Action/: FILE_Hackathon I_ Physical AI & Humanoid Robotics Textbook (1).md  FILE_README_retry_1.md  FILE_hack1 prompt.docx  FILE_hack1 prompt.md  FILE_live_test.txt  FILE_live_test_retry_1.md  FILE_new_retry_1.md  FILE_price inquiry.docx  FILE_price inquiry_retry_1.md  GMAIL_19c975702768deb0_retry_1.md
agent/: orchestrator.py  prompts.py  ralph_loop.py  skills.py
agent_platform/: capabilities.py  config.py
audit/: logger.py
deploy/: Caddyfile  Dockerfile.agent  docker-compose.yml  setup_cloud.sh  supervisord.conf
docs/: lessons_learned.md
health/: __init__.py  heartbeat.py  monitor.py
mcp_servers/: gmail_mcp.py  odoo_mcp.py  social_mcp.py
platform/: __init__.py  capabilities.py
scheduler/: weekly_briefing.py
sync/: __init__.py  dashboard_merger.py  vault_sync.py
watchers/: facebook_watcher.py  instagram_watcher.py  twitter_watcher.py
